--- a/tampilan.html
+++ b/tampilan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=760 cellpadding=5">
     <title>Halaman Bootstrap Lokal</title>
     <!-- Menyertakan Bootstrap CSS lokal -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -11,9 +11,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Selamat Datang di Halaman Bootstrap Lokal</h1>
-        <p>Ini adalah contoh halaman menggunakan Bootstrap yang di-hosting secara lokal.</p>
-        <button class="btn btn-primary" id="myButton">Klik Saya</button>
+        <table>
+            <tr>
+                <td><img src="makassar.gif" alt="Logo Makassar"></td>
+                <td><span class="header-text">SEKOLAH MENENGAH KEJURUAN<br>NEGERI 4 MAKASSAR</span></td>
+                <td><img src="depdiknas.gif" alt="Logo Depdiknas"></td>
+            </tr>
+        </table>
     </div>
 
     <!-- Menyertakan Bootstrap JS lokal dan dependensi popper.js -->
