--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <tr>
             <hr></hr>
             <td width="160">
-                <a href="dapur.html">Dapur Produksi Plus</a>
+                <a href="dapur.html">(((Dapur Produksi Plus</a>
             </td>
             <td class="center">
                  MENGABDI DAN MENCERDASKAN BANGSA
             </td>
             <td width="160">
-                <a href="index-1.html">English Version</a>
+                <a href="index-1.html">English Version))) </a>
             </td>
         </tr>
     </table>
